--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/musica.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.db4o-8.0.184.15484-all-java5.jar=..\\..\\..\\..\\Desktop\\db4o-8.0.184.15484-all-java5.jar
+file.reference.db4o-8.0.184.15484-all-java5.jar-1=db4o-8.0.184.15484-all-java5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.db4o-8.0.184.15484-all-java5.jar}
+    ${file.reference.db4o-8.0.184.15484-all-java5.jar}:\
+    ${file.reference.db4o-8.0.184.15484-all-java5.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
